Setup to use postgresql database

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ name = "pypi"
 [packages]
 django = "==2.1.1"
 django-webpack-loader = "*"
+"psycopg2" = "*"
+"psycopg2-binary" = "*"
 
 [requires]
 python_version = "3.7"
