Removed webpack stats file

--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,10 @@ frontend/src/**/*.css
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+webpack-stats.dev.json
 
 *.pyc
 __pycache__
