Connected fetch action to DRF

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "==2.1.1"
 django-webpack-loader = "*"
 "psycopg2" = "*"
 "psycopg2-binary" = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
